test: 덱 추상화로 인한 테스트 수정